fixed spacing

--- a/histarchexplorer/static/scss/components/home.scss
+++ b/histarchexplorer/static/scss/components/home.scss
@@ -126,7 +126,7 @@
 
 #carousel-overlay {
   position: absolute;
-  top: 120px;
+  top: 80px;
   left: 0;
   width: 100%;
   z-index: 500;
